--- a/socket.html
+++ b/socket.html
@@ -1,8 +1,11 @@
-<script src="/socket.io/socket.io.js"></script>
+
+<script src="/node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js"></script>
+
 <script>
-  var socket = io.connect('http://localhost:1331/socket.html');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
+
+  var socket = io.connect('http://50.56.236.40:1331');
+ socket.on('news', function (data) {
+ console.log(data.hello);
+   // socket.emit('my other event', { my: 'data' });
   });
 </script>
